--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ body {
 h1 {
     display: inline;
 }
+header {
+    background-color: aqua;
+    padding: 10px;
+    margin: 0px
+}
 
 header nav{
 
@@ -22,23 +27,33 @@ header nav{
 }
 
 
-header nav ul {
+header nav ul,
+footer nav ul  {
     list-style-type: none;
 }
 
-header nav ul li {
+header nav ul li,
+footer nav ul  {
     display: inline-block;
      margin-left: 25px;
 }
 
 figure {
-    height: 450px;
-    width: 50%;
+    height: 100px;
+    width: 25%;
     margin-bottom: 25px;
     background-image: url("../images/profile.JPG") ;
     background-size: cover;
     background-position: center;  
-    align-content: center;      
+    align-content: center; 
+    float: right;     
+}
+
+
+.content {
+    width: 50%;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 a {
@@ -48,6 +63,86 @@ a {
 
 p {
     font-size: 100%;
+    display: inline;
+    padding: 0;
+    margin: 0;
+    text-align: justify;
+}
+
+#about-me h2 {
+    margin-bottom: 20px;
+    position: relative;
+    left: 20px;
+    float: right;
+    margin-left: 10%;
+}
+
+h2 .vl,
+.work h2{
+    float: left;
+    margin-right: 15px;
+    display: inline;
 }
 
 
+p, h2 {
+    display: inline-block;
+}
+
+
+/*.vl {
+    border-left: 10px gray;
+    height: fit-content;
+    padding: 25px;
+    margin-bottom: 100px;
+    
+}*/
+
+
+.background-image {
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+    align-items: center;
+    border: blue;
+    border-radius: 10px;
+}
+
+.featured-card {
+    position: absolute;
+    bottom: 21px;
+    left: 16px;
+}
+
+
+
+
+
+
+footer {
+    padding: 30px;
+    clear: both;
+    text-align: center;
+}
+
+.footer-bar {
+    word-spacing: 40px;
+}
+footer nav{
+    padding-top: 15px;
+    float:none;
+    font-size: 20px;
+    
+}
+footer nav ul {
+    list-style-type: none ;
+}
+
+footer nav ul li {
+    display: inline-block;
+    
+}
+
+footer nav a {
+    color: black;
+}
