--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,99 @@ footer nav a {
 #mobile-nav {
     display: none;
 }
+
+
+
+
+
+
+
+/*project Section*/
+
+.container-projects {
+    width: 100%;
+    height: auto;
+}
+
+
+.header-projects {
+    font-size: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 22px;
+
+}
+
+.projects {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: wrap;
+}
+
+
+.Surf-Report {
+    width: 1100px;
+    height: 350px;
+    background-color: white;
+    position: relative;
+    box-shadow: -10px 3px 25px black;
+    border-radius: 10px;
+    margin: 50px;
+    background-image: url(/assets/images/surf.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.LED-wall {
+    width: 600px;
+    height: 350px;
+    background-color: white;
+    position: relative;
+    box-shadow: -10px 3px 25px black;
+    border-radius: 10px;
+    margin: 50px;
+    background-image: url(/assets/images/surf.jpg);
+    background-size: cover;
+    background-position: right;
+}
+
+.Calculator {
+    width: 600px;
+    height: 350px;
+    background-color: white;
+    position: relative;
+    box-shadow: -10px 3px 25px black;
+    border-radius: 10px;
+    margin: 50px;
+    background-image: url(/assets/images/surf.jpg);
+    background-size: cover;
+    background-position: left;
+}
+
+.Pastel-puzzle {
+    width: 600px;
+    height: 350px;
+    background-color: white;
+    position: relative;
+    box-shadow: -10px 3px 25px black;
+    border-radius: 10px;
+    margin: 50px;
+    background-image: url(/assets/images/surf.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.Buddy-run {
+    width: 600px;
+    height: 350px;
+    background-color: white;
+    position: relative;
+    box-shadow: -10px 3px 25px black;
+    border-radius: 10px;
+    margin: 50px;
+    background-image: url(/assets/images/surf.jpg);
+    background-size: cover;
+    background-position: center;
+}
