--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,8 +221,8 @@ footer nav a {
 }
 
 .Calculator {
-    width: 600px;
-    height: 350px;
+    width: 500px;
+    height: 300px;
     background-color: white;
     position: relative;
     box-shadow: -10px 3px 25px black;
@@ -234,8 +234,8 @@ footer nav a {
 }
 
 .Pastel-puzzle {
-    width: 600px;
-    height: 350px;
+    width: 500px;
+    height: 300px;
     background-color: white;
     position: relative;
     box-shadow: -10px 3px 25px black;
@@ -243,18 +243,23 @@ footer nav a {
     margin: 50px;
     background-image: url(/assets/images/surf.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: right;
 }
 
 .Buddy-run {
-    width: 600px;
-    height: 350px;
+    width: 500px;
+    height: 300px;
     background-color: white;
     position: relative;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
     margin: 50px;
-    background-image: url(/assets/images/surf.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: left;
 }
+
+
+
+
+
+
