--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,18 +14,38 @@ body {
     background-color: rgb(227, 222, 222);
 }
 /* header section with name h1 & the navigation bar*/
-h1 {
-    display: inline;
+
+
+figure {
+    height: 15vh;
+    width: 20%;
+    margin-bottom: 25px;
+    background-image: url("../images/profile.JPG") ;
+    background-size: cover;
+    background-position: center;  
+    align-content: center; 
+    display: inline; 
 }
+
+.content {
+    width: 80%;
+    justify-content: center;
+    padding: 15px;
+    flex-wrap: wrap;
+    
+    display: flex;
+    align-items: stretch;
+}
+
 header {
     background-color: aqua;
-    padding: 10px;
-    margin: 0px
+    padding: 25px;
+    margin: 0px;
 }
 
 header nav{
 
-    padding-top: 15px;
+    padding-top: 0;
     margin-right: 20px;
     float: right;
     font-size: 25px;
@@ -48,23 +68,10 @@ footer nav ul  {
 /*profile picture with the about me section*/
 
 
-figure {
-    height: 25vh;
-    width: 25%;
-    margin-bottom: 25px;
-    background-image: url("../images/profile.JPG") ;
-    background-size: cover;
-    background-position: center;  
-    align-content: center; 
-    float: right;     
-}
 
 
-.content {
-    width: 50%;
-    display: inline-block;
-    margin-left: 20px;
-}
+
+
 
 a {
     color: #ffffff;
@@ -79,7 +86,7 @@ p {
     text-align: justify;
 }
 
-#about-me h2 {
+.about-me {
     margin-bottom: 20px;
     position: relative;
     left: 20px;
@@ -100,13 +107,7 @@ p, h2 {
 }
 
 
-/*.vl {
-    border-left: 10px gray;
-    height: fit-content;
-    padding: 25px;
-    margin-bottom: 100px;
-    
-}*/
+
 
 
 .background-image {
