--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 
 body {
-    background-color: rgb(97, 93, 93);
+    background-color: rgb(255, 255, 255);
 }
 /* header section with name h1 & the navigation bar*/
 
@@ -18,8 +18,14 @@ ul {
 }
 
 
-
-
+header h2 {
+    background-color: blue;
+}
+.top-page {
+    width: 100%;
+    height: 75px;
+    background-color: rgb(94, 94, 94);
+}
 
 nav {
     display: flex;
@@ -68,6 +74,7 @@ nav ul li {
 
 .section-tag1 h2 {
     padding: 5px;
+    padding-bottom: 15px;
 }
 
 
@@ -111,16 +118,6 @@ p {
 }
 
 
-
-
-
-
-
-
-
-
-
-
 footer {
     padding: 30px;
     clear: both;
@@ -129,19 +126,19 @@ footer {
 
 .footer-bar {
     word-spacing: 40px;
-    align-content: center;
+  
+   
 }
+
 footer nav{
     padding-top: 15px;
-    float:none;
+
     font-size: 20px;
+
+    
     
 }
 
-footer nav ul li {
-    display: inline-block;
-    
-}
 
 footer nav a {
     color: black;
@@ -154,7 +151,9 @@ footer nav a {
 }
 
 
-
+.name {
+    text-align: center;
+}
 
 
 
@@ -164,82 +163,96 @@ footer nav a {
 
 
 .header-projects {
-    font-size: 5rem;
+    font-size: 4rem;
     display: flex;
     display: inline-block;
     align-items: center;
     justify-content: left;
-    margin: 22px;
-
-}
-
-#projects {
-    align-content: center;
-
-
+    margin: 50px;
+    border-right: 4px solid black;
+    flex: 0 0 20%;padding-right: 45px;
 }
 
 
-.item-project {
-    align-content: right;
-}
 
 .Surf-Report {
-    width: 1100px;
-    height: 350px;
-    background-color: white;
+    width: 800px;
+    height: 300px;
+    background-image: url(https://www.pexels.com/photo/a-person-surfing-on-the-sea-5873907/);
+    background-size: cover;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
-    margin: 50px;
+    margin-left: auto;
+    margin-right: 50px;
+
 
 }
 
 .LED-wall {
-    width: 400px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     background-color: white;
-    position: relative;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
     margin: 50px;
-    
+    margin-left: auto;
 
 }
 
+
 .Calculator {
-    width: 400px;
+    width: 300px;
     height: 300px;
     background-color: white;
-    position: relative;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
     margin: 50px;
-
+    margin-left: auto;
 
 }
 
 .Pastel-puzzle {
-    width: 500px;
+    width: 300px;
     height: 300px;
     background-color: white;
-    position: relative;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
     margin: 50px;
+    margin-left: auto;
+    vertical-align: top;
 
 }
 
-.Buddy-run {
-    width: 500px;
-    height: 300px;
-    background-color: white;
-    position: relative;
-    box-shadow: -10px 3px 25px black;
-    border-radius: 10px;
-    margin: 50px;
+
+    .Buddy-run {
+        width: 300px;
+        height: 300px;
+        background-color: white;
+        box-shadow: -10px 3px 25px black;
+        border-radius: 10px;
+        margin: 50px;
+        margin-left: auto;
+        vertical-align: top;
+    
+    }
+
+
+/*positiong the 2 extra containers per row next to each other*/
+
+
+.led-calculator{
+    width: 74%;
+    float: left;
+    margin-left: auto;
 
 }
 
+.pastel-buddy {
+    width: 74%;
+    float: left;
+    margin-left: auto;
+    vertical-align: top;
+}
 
 
 
