--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,13 +178,23 @@ footer nav a {
 .Surf-Report {
     width: 1075px;
     height: 300px;
-    background-image: url(https://www.pexels.com/photo/a-person-surfing-on-the-sea-5873907/);
-    background-size: cover;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
     margin-left: auto;
     margin-right: 50px;
 
+
+}
+.Surf-Report h2{
+    position: absolute;
+    z-index: 1;
+}
+
+.Surf-Report img{
+    position: relative;
+    height: 301px;
+   width: 100%;
+   border-radius: 10px;
 
 }
 
